--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!doctype html><html><head><meta charset='utf-8'><title>Kisah Sukses Pro</title><link rel='stylesheet' href='/style.css'></head><body><div id='app'></div><script src='/script.js'></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kisah Sukses Pro</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <div class="container">
+    <h1>Kisah Sukses Pro</h1>
+
+    <textarea id="userInput" placeholder="Tulis pesanmu..."></textarea>
+
+    <button onclick="sendMessage()">Kirim</button>
+
+    <div id="response"></div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
